# buf-ping

./: .gitignore  CHANGELOG.md  LICENSE  README.md  go.mod  go.sum
.github/workflows/: release-please.yml
ci/: main.go
cmd/pingpy/: README.md  cli.py  pyproject.toml
cmd/pingsrv/: entrypoint.go  health.go  main.go  o11y.go  server.go
pkg/ping/: ping.go
proto/: buf.gen.yaml  buf.md  buf.yaml
proto/ping/v1/: ping.proto
